syntax = "proto3";
option java_package = "VireProtobuf.vire.utility";
option java_outer_classname = "InstanceIdentifierStub";
package vire.utility;

import "vire/utility/BaseIdentifier.proto";

// Identifier for object instances :
message InstanceIdentifier {

  BaseIdentifier _base = 1;

}